# mrswats-health-django-app

./: .pre-commit-config.yaml  README.md  manage.py  pyproject.toml  requirements.txt  test-requirements.txt
.github/workflows/: mypy.yaml
health/: urls.py  views.py
testing/: asgi.py  settings.py  urls.py  wsgi.py
tests/: conftest.py  test_health.py
